@@ -1,8 +1,9 @@
 Release 1.5
+- Feature: The merging and rendering of transpositions is now switchable in the web-service.
+- Feature: Punctuation is now treated as separate tokens by default in the web-service and command-line tool.
 - Transposition limiter is moved from the Transposition Detector class to the DekkerAlgorithm class.
 - The transposition detector is rewritten. It no longer works from left to right, but from largest
  moved distance to smallest moved distance. This improves the alignment result in case of longer witnesses. 
-- Punctuation is now treated as separate tokens by default in the web-service.
 - Improved handling of competing blocks of text in the IslandConflictResolver.
 - Fix: When splitting island in the IslandConflictResolver resulting islands were only
 kept if there were of size two and up. Now they are kept if they are of size one and up.
